--- a/src/styles/lx-inputs.css
+++ b/src/styles/lx-inputs.css
@@ -552,6 +552,7 @@
   visibility: hidden;
   overflow: hidden;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .lx .lx-markdown-text-area a {
